# codex-mcp-router

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  SECURITY.md  audit-requirements.txt  config.example.toml  launch-tunnel.cmd  launch-tunnel.sh  main.py  pyproject.toml  wrapper.cmd
codexpc_connector/: __init__.py  config.py  discovery.py  instance_lock.py  local_tools.py  logging_utils.py  mcp_manager.py  security.py  server.py  tools.py
docs/: TUNNEL_SETUP.md
scripts/: self_check.py  setup_tunnel.py  smoke_stdio.py
tests/: test_connector.py
