[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "codexpc-connector"
version = "0.3.0"
description = "MCP adapter for native Codex app-server tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "niktoimiya" }]
keywords = ["mcp", "codex", "chatgpt", "local-tools", "model-context-protocol"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "mcp>=1.28.1,<2",
  "httpx>=0.27,<1",
  "keyring>=25,<27",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.8",
  "build>=1.2",
  "mypy>=1.15",
  "pip-audit>=2.8",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "ruff>=0.9",
]

[project.scripts]
codexpc-connector = "codexpc_connector.server:main"

[project.urls]
Repository = "https://github.com/niktoimiyazap/codexpc-connector"
Issues = "https://github.com/niktoimiyazap/codexpc-connector/issues"

[tool.hatch.build.targets.wheel]
packages = ["codexpc_connector"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["codexpc_connector"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
